Agrego texto y dropdown

--- a/index.html
+++ b/index.html
@@ -39,8 +39,15 @@
                                     <h1 class="modal-title fs-5" id="exampleModalLabel">Create a new post</h1>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                         aria-label="Close"></button>
+
                                 </div>
                                 <div class="modal-body">
+                                    <strong>Caption:</strong>
+                                    <div class="card">
+                                        <div class="card-body">
+                                            This is some text within a card body.
+                                        </div>
+                                    </div>
                                     <div class="d-grid gap-2 d-md-block">
                                         <button class="btn btn-light" type="button"> <i
                                                 class="fa-solid fa-camera"></i></button>
@@ -66,7 +73,7 @@
                                 aria-expanded="false">
                                 <i class="fa-solid fa-gear"></i>
                             </a>
-                            <ul class="dropdown-menu">
+                            <ul class="dropdown-menu dropdown-menu-end">
                                 <li><a class="dropdown-item" href="#">Action</a></li>
                                 <li><a class="dropdown-item" href="#">Another action</a></li>
                                 <li>
