Se agrega campo de texto

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
                                 <div class="modal-body">
                                     <strong>Caption:</strong>
                                     <div class="card">
-                                        <div class="card-body">
-                                            This is some text within a card body.
+                                        <div class="mb-3">
+                                            <label for="exampleFormControlTextarea1" class="form-label"></label>
+                                            <textarea class="form-control" id="exampleFormControlTextarea1"
+                                                rows="3"></textarea>
                                         </div>
                                     </div>
                                     <div class="d-grid gap-2 d-md-block">
@@ -58,7 +60,7 @@
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary"
                                         data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                    <button type="button" class="btn btn-primary">Publish</button>
                                 </div>
                             </div>
                         </div>
@@ -74,12 +76,13 @@
                                 <i class="fa-solid fa-gear"></i>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">Profile</a></li>
+                                <li><a class="dropdown-item" href="#">Accesibility</a></li>
+                                <li><a class="dropdown-item" href="#">Privacy And Data</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" style="color: red;" href="#">Log out</a></li>
                             </ul>
                         </li>
                     </ul>
